
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
void Huff_Swap( void **tree1, void **tree2, void **tree3 ) {
 void **a, **b;

 a = tree2[2];
 if( a ) {
  if( a[0] == tree2 ) {
   a[0] = tree3;
  } else {
   a[1] = tree3;
  }
 } else {
  tree1[2] = tree3;
 }

 b = tree3[2];

 if( b ) {
  if( b[0] == tree3 ) {
   b[0] = tree2;
   tree2[2] = b;
   tree3[2] = a;
   return;
  }

  b[1] = tree2;
  tree2[2] = b;
  tree3[2] = a;
  return;
 }

 tree1[2] = tree2;
 tree2[2] = ((void*)0);
 tree3[2] = a;
}
