; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_841.c_Huff_Swap.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_841.c_Huff_Swap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Huff_Swap(i8** %0, i8** %1, i8** %2) #0 {
  %4 = alloca i8**, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8**, align 8
  %8 = alloca i8**, align 8
  store i8** %0, i8*** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i8** %2, i8*** %6, align 8
  %9 = load i8**, i8*** %5, align 8
  %10 = getelementptr inbounds i8*, i8** %9, i64 2
  %11 = load i8*, i8** %10, align 8
  %12 = bitcast i8* %11 to i8**
  store i8** %12, i8*** %7, align 8
  %13 = load i8**, i8*** %7, align 8
  %14 = icmp ne i8** %13, null
  br i1 %14, label %15, label %33

15:                                               ; preds = %3
  %16 = load i8**, i8*** %7, align 8
  %17 = getelementptr inbounds i8*, i8** %16, i64 0
  %18 = load i8*, i8** %17, align 8
  %19 = load i8**, i8*** %5, align 8
  %20 = bitcast i8** %19 to i8*
  %21 = icmp eq i8* %18, %20
  br i1 %21, label %22, label %27

22:                                               ; preds = %15
  %23 = load i8**, i8*** %6, align 8
  %24 = bitcast i8** %23 to i8*
  %25 = load i8**, i8*** %7, align 8
  %26 = getelementptr inbounds i8*, i8** %25, i64 0
  store i8* %24, i8** %26, align 8
  br label %32

27:                                               ; preds = %15
  %28 = load i8**, i8*** %6, align 8
  %29 = bitcast i8** %28 to i8*
  %30 = load i8**, i8*** %7, align 8
  %31 = getelementptr inbounds i8*, i8** %30, i64 1
  store i8* %29, i8** %31, align 8
  br label %32

32:                                               ; preds = %27, %22
  br label %38

33:                                               ; preds = %3
  %34 = load i8**, i8*** %6, align 8
  %35 = bitcast i8** %34 to i8*
  %36 = load i8**, i8*** %4, align 8
  %37 = getelementptr inbounds i8*, i8** %36, i64 2
  store i8* %35, i8** %37, align 8
  br label %38

38:                                               ; preds = %33, %32
  %39 = load i8**, i8*** %6, align 8
  %40 = getelementptr inbounds i8*, i8** %39, i64 2
  %41 = load i8*, i8** %40, align 8
  %42 = bitcast i8* %41 to i8**
  store i8** %42, i8*** %8, align 8
  %43 = load i8**, i8*** %8, align 8
  %44 = icmp ne i8** %43, null
  br i1 %44, label %45, label %78

45:                                               ; preds = %38
  %46 = load i8**, i8*** %8, align 8
  %47 = getelementptr inbounds i8*, i8** %46, i64 0
  %48 = load i8*, i8** %47, align 8
  %49 = load i8**, i8*** %6, align 8
  %50 = bitcast i8** %49 to i8*
  %51 = icmp eq i8* %48, %50
  br i1 %51, label %52, label %65

52:                                               ; preds = %45
  %53 = load i8**, i8*** %5, align 8
  %54 = bitcast i8** %53 to i8*
  %55 = load i8**, i8*** %8, align 8
  %56 = getelementptr inbounds i8*, i8** %55, i64 0
  store i8* %54, i8** %56, align 8
  %57 = load i8**, i8*** %8, align 8
  %58 = bitcast i8** %57 to i8*
  %59 = load i8**, i8*** %5, align 8
  %60 = getelementptr inbounds i8*, i8** %59, i64 2
  store i8* %58, i8** %60, align 8
  %61 = load i8**, i8*** %7, align 8
  %62 = bitcast i8** %61 to i8*
  %63 = load i8**, i8*** %6, align 8
  %64 = getelementptr inbounds i8*, i8** %63, i64 2
  store i8* %62, i8** %64, align 8
  br label %89

65:                                               ; preds = %45
  %66 = load i8**, i8*** %5, align 8
  %67 = bitcast i8** %66 to i8*
  %68 = load i8**, i8*** %8, align 8
  %69 = getelementptr inbounds i8*, i8** %68, i64 1
  store i8* %67, i8** %69, align 8
  %70 = load i8**, i8*** %8, align 8
  %71 = bitcast i8** %70 to i8*
  %72 = load i8**, i8*** %5, align 8
  %73 = getelementptr inbounds i8*, i8** %72, i64 2
  store i8* %71, i8** %73, align 8
  %74 = load i8**, i8*** %7, align 8
  %75 = bitcast i8** %74 to i8*
  %76 = load i8**, i8*** %6, align 8
  %77 = getelementptr inbounds i8*, i8** %76, i64 2
  store i8* %75, i8** %77, align 8
  br label %89

78:                                               ; preds = %38
  %79 = load i8**, i8*** %5, align 8
  %80 = bitcast i8** %79 to i8*
  %81 = load i8**, i8*** %4, align 8
  %82 = getelementptr inbounds i8*, i8** %81, i64 2
  store i8* %80, i8** %82, align 8
  %83 = load i8**, i8*** %5, align 8
  %84 = getelementptr inbounds i8*, i8** %83, i64 2
  store i8* null, i8** %84, align 8
  %85 = load i8**, i8*** %7, align 8
  %86 = bitcast i8** %85 to i8*
  %87 = load i8**, i8*** %6, align 8
  %88 = getelementptr inbounds i8*, i8** %87, i64 2
  store i8* %86, i8** %88, align 8
  br label %89

89:                                               ; preds = %78, %65, %52
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
